--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,8 +1,17 @@
 .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     align-items: center;
     justify-content: center;
     position: fixed;
     z-index: 1000;
-    box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.5);
+    background-color: rgb(230, 230, 230);
+    padding: 1.5rem;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    font-size: 1.5rem;
+    
 }
